Updated sponsors page with link
Updated Sponsors page with link to prospectus and updated community events.

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -11,7 +11,7 @@ RSVP now for September Events
 
 <Text my={20}>09.19.2019 <a href="https://www.eventbrite.com/e/what-is-the-new-swag-with-ngrx-tickets-70824998477" target="_blank" rel="noopener noreferrer">Intro to Ngrx and State Management in Angular Apps</a></Text>
 
-<Text my={20}>09.25.2019 Vue Js Columbus Meetup to be updated</Text>
+<Text my={20}>09.25.2019 <a href="https://www.meetup.com/Vue-Columbus/events/jgbfwqyzmbhc/" target="_blank" rel="noopener noreferrer">Explore Vue 3 and Composition Function API</a></Text>
 
 <Text my={20}>09.30.2019 React Online Meetup to be updated</Text>
 
