--- a/src/pages/callforsponsors.mdx
+++ b/src/pages/callforsponsors.mdx
@@ -21,7 +21,7 @@ Second Annual JavaScript and Friends Conference a success. And with your contrib
 Our team has created opportunities for sponsorship at a number of levels to make it easier for you to support our team of volunteers
 in bringing this about.
 
-<a href="https://drive.google.com/file/d/1lgFWQzzwd_mQloVKiVA9QYoEp-7ysa8A/view?usp=sharing" target="_blank" rel="noopener noreferrer">View our Sponsorship Opportunities</a>
+<a href="https://drive.google.com/a/javascriptandfriends.com/file/d/1qFY4foo0c5Kl--WkqvfOeU1vGjOX09Dd/view?usp=sharing" target="_blank" rel="noopener noreferrer">View our Sponsorship Opportunities</a>
 
 ### Where is my money going?
 
