--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -7,13 +7,13 @@ import Text from "../components/Text";
 
 ## Community Events
 
-RSVP now for September Events
+RSVP now for October Events
 
-<Text my={20}>09.19.2019 <a href="https://www.eventbrite.com/e/what-is-the-new-swag-with-ngrx-tickets-70824998477" target="_blank" rel="noopener noreferrer">Intro to Ngrx and State Management in Angular Apps</a></Text>
+<Text my={20}>10.17.2019 <a href="https://www.eventbrite.com/e/managing-http-requests-w-ngrx-tickets-70983875683" target="_blank" rel="noopener noreferrer">Managing Http Requests with Ngrx</a></Text>
 
-<Text my={20}>09.25.2019 <a href="https://www.meetup.com/Vue-Columbus/events/jgbfwqyzmbhc/" target="_blank" rel="noopener noreferrer">Explore Vue 3 and Composition Function API</a></Text>
+<Text my={20}>10.23.2019 <a href="https://www.meetup.com/Vue-Columbus/events/jgbfwqyznbfc/" target="_blank" rel="noopener noreferrer">Securing Vue.js with OpenID Connect and OAuth</a></Text>
 
-<Text my={20}>09.30.2019 React Online Meetup to be updated</Text>
+<Text my={20}>10.28.2019 React Online Meetup to be updated</Text>
 
 Interested in speaking at our community events reach out to us 
 at <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>
