Update Community Events
Updated Meetups for November

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -7,13 +7,13 @@ import Text from "../components/Text";
 
 ## Community Events
 
-RSVP now for October Events
+RSVP now for November Events
 
-<Text my={20}>10.17.2019 <a href="https://www.eventbrite.com/e/managing-http-requests-w-ngrx-tickets-70983875683" target="_blank" rel="noopener noreferrer">Managing Http Requests with Ngrx</a></Text>
+<Text my={20}>11.11.2019 <a href="https://www.eventbrite.com/e/e2e-testing-is-a-waste-of-time-until-now-tickets-78307029433" target="_blank" rel="noopener noreferrer">E2E testing is a waste of time... until now</a></Text>
 
-<Text my={20}>10.23.2019 <a href="https://www.meetup.com/Vue-Columbus/events/jgbfwqyznbfc/" target="_blank" rel="noopener noreferrer">Securing Vue.js with OpenID Connect and OAuth</a></Text>
+<Text my={20}>11.18.2019 <a href="https://www.eventbrite.com/e/javascript-and-friends-react-meetup-tickets-78310802719" target="_blank" rel="noopener noreferrer">Bringing Ionic (and Web Components) to React</a></Text>
 
-<Text my={20}>10.28.2019 React Online Meetup to be updated</Text>
+<Text my={20}>11.27.2019 <a href="https://www.meetup.com/Vue-Columbus/events/jgbfwqyzpbkc/" target="_blank" rel="noopener noreferrer">Fundamental Component Design Patterns</a></Text>
 
 Interested in speaking at our community events reach out to us 
 at <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>
