Updated January Community Events
Community Events and Included Venue details on Home Page and included a link to Call for Sponsors in Sponsors Page.

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -5,20 +5,27 @@ import Text from "../components/Text";
 
 <Card>
 
+<Text my={20}>Call for Speakers now open for 2020 Developer Community Meetups. <a href="https://forms.gle/25rCPEE6WwsjMQSs7" target="_blank" rel="noopener noreferrer">Fill in your details to get scheduled</a>.</Text>
+
 ## Community Events
 
-RSVP now for October Events
+RSVP now for January Events
 
-<Text my={20}>10.17.2019 <a href="https://www.eventbrite.com/e/managing-http-requests-w-ngrx-tickets-70983875683" target="_blank" rel="noopener noreferrer">Managing Http Requests with Ngrx</a></Text>
+<Text my={20}>01.06.2020 <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tech-talks-tickets-85513181227" target="_blank" rel="noopener noreferrer">Kubernetes Online Tech Talk by Joel Lord</a></Text>
 
-<Text my={20}>10.23.2019 <a href="https://www.meetup.com/Vue-Columbus/events/jgbfwqyznbfc/" target="_blank" rel="noopener noreferrer">Securing Vue.js with OpenID Connect and OAuth</a></Text>
+<Text my={20}>01.22.2020 <a href="https://www.eventbrite.com/e/javascript-and-friends-vuejs-columbus-meetup-tickets-85537704577" target="_blank" rel="noopener noreferrer">An Introduction to Gridsome by Raymond Camden</a></Text>
 
-<Text my={20}>10.28.2019 React Online Meetup to be updated</Text>
+<Text my={20}>React Online Meetup to be scheduled</Text>
 
-Interested in speaking at our community events reach out to us 
-at <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>
+<Text my={20}>Angular Online Meetup to be scheduled</Text>
 
-<a href="http://eepurl.com/gubqeb" target="_blank">Subscribe </a>to our mailing list for updates. 
+## Subscribe
+
+<a href="http://eepurl.com/gubqeb" target="_blank">Subscribe </a>to our mailing list for updates on developer community events. 
+
+Follow our <a href="https://www.youtube.com/channel/UCz4LNOw6U7ncyOSx73u_YMQ/videos?view_as=subscriber" target="_blank">YouTube Channel</a> to watch prior recorded meetups.
+
+Follow our <a href="https://www.twitch.tv/javascriptandfriends/" target="_blank">Twitch Channel</a> to join our meetups live.
 
 
 </Card>
