--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -9,15 +9,19 @@ import Text from "../components/Text";
 
 ## Community Events
 
-RSVP now for January Events
+RSVP Open for Community Meetups 
 
-<Text my={20}>01.22.2020 <a href="https://www.eventbrite.com/e/javascript-and-friends-vuejs-columbus-meetup-tickets-85537704577" target="_blank" rel="noopener noreferrer">An Introduction to Gridsome by Raymond Camden</a></Text>
+<Text my={20}>01.28.2020 <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tech-talks-tickets-85513181227" target="_blank" rel="noopener noreferrer">Kubernetes Online Talk by Joel Lord</a></Text>
 
-<Text my={20}>01.28.2020 <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tech-talks-tickets-85513181227" target="_blank" rel="noopener noreferrer">Kubernetes Online Tech Talk by Joel Lord</a></Text>
+<Text my={20}>02.05.2020 <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-typescript-tickets-90322578263" target="_blank" rel="noopener noreferrer">TypeScript Online Talk by  Sivamuthu Kumar</a></Text>
 
-<Text my={20}>React Online Meetup to be scheduled</Text>
+<Text my={20}>02.10.2020 <a href="https://www.eventbrite.com/e/javascript-and-friends-react-online-meetup-tickets-90392726077" target="_blank" rel="noopener noreferrer">React Online Talk by Ashok Vishwakarma</a></Text>
 
-<Text my={20}>Angular Online Meetup to be scheduled</Text>
+<Text my={20}>02.12.2020 <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-angular-tickets-90908691343" target="_blank" rel="noopener noreferrer">Angular Online Talk by Jordan Powell</a></Text>
+
+<Text my={20}>02.19.2020 <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-svelte-tickets-90472245923" target="_blank" rel="noopener noreferrer">Svelte Online Talk by Shawn Wang</a></Text>
+
+<Text my={20}>02.26.2020  VueJs Online Meetup to be scheduled</Text>
 
 ## Subscribe
 
