Updated Community Events
Updated Community Events

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -11,8 +11,6 @@ import Text from "../components/Text";
 
 RSVP Open for Community Meetups 
 
-<Text my={20}>01.28.2020 <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tech-talks-tickets-85513181227" target="_blank" rel="noopener noreferrer">Kubernetes Online Talk by Joel Lord</a></Text>
-
 <Text my={20}>02.05.2020 <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-typescript-tickets-90322578263" target="_blank" rel="noopener noreferrer">TypeScript Online Talk by  Sivamuthu Kumar</a></Text>
 
 <Text my={20}>02.10.2020 <a href="https://www.eventbrite.com/e/javascript-and-friends-react-online-meetup-tickets-90392726077" target="_blank" rel="noopener noreferrer">React Online Talk by Ashok Vishwakarma</a></Text>
@@ -21,7 +19,7 @@ RSVP Open for Community Meetups
 
 <Text my={20}>02.19.2020 <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-svelte-tickets-90472245923" target="_blank" rel="noopener noreferrer">Svelte Online Talk by Shawn Wang</a></Text>
 
-<Text my={20}>02.26.2020  VueJs Online Meetup to be scheduled</Text>
+<Text my={20}>02.25.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-techlaunchers-online-meetup-tickets-94224683565" target="_blank" rel="noopener noreferrer">TechLaunchers Chat with Evelyn Van Til</a></Text>
 
 ## Subscribe
 
