Updated Community Events
Updated Community Events

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -11,15 +11,9 @@ import Text from "../components/Text";
 
 RSVP Open for Community Meetups 
 
-<Text my={20}>02.05.2020 <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-typescript-tickets-90322578263" target="_blank" rel="noopener noreferrer">TypeScript Online Talk by  Sivamuthu Kumar</a></Text>
-
-<Text my={20}>02.10.2020 <a href="https://www.eventbrite.com/e/javascript-and-friends-react-online-meetup-tickets-90392726077" target="_blank" rel="noopener noreferrer">React Online Talk by Ashok Vishwakarma</a></Text>
-
-<Text my={20}>02.12.2020 <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-angular-tickets-90908691343" target="_blank" rel="noopener noreferrer">Angular Online Talk by Jordan Powell</a></Text>
-
-<Text my={20}>02.19.2020 <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-svelte-tickets-90472245923" target="_blank" rel="noopener noreferrer">Svelte Online Talk by Shawn Wang</a></Text>
-
 <Text my={20}>02.25.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-techlaunchers-online-meetup-tickets-94224683565" target="_blank" rel="noopener noreferrer">TechLaunchers Chat with Evelyn Van Til</a></Text>
+
+<Text my={20}>03.11.2020  <a href="https://www.linkedin.com/posts/javascript-and-friends_columbus-ohio-technical-activity-6636372060631257088-T-WT" target="_blank" rel="noopener noreferrer">Book Donation Drive - Columbus Library, Dublin Branch</a></Text>
 
 ## Subscribe
 
