--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -17,7 +17,7 @@ RSVP Open for Community Meetups
 
 <Text my={20}>03.18.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-96032314237" target="_blank" rel="noopener noreferrer">Asynchronous Events in JavaScript talk by Bob Fornal</a></Text>
 
-<Text my={20}>03.25.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-vuejs-online-meetup-tickets-96033230979" target="_blank" rel="noopener noreferrer">SSR Overview with Nuxt and VueJS talk by Jessie</a></Text>
+<Text my={20}>03.25.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-vuejs-online-meetup-tickets-96033230979" target="_blank" rel="noopener noreferrer">SSR Overview with Nuxt and VueJS talk by Jessie Barnett</a></Text>
 
 ## Subscribe
 
