--- a/src/pages/callforspeakers.mdx
+++ b/src/pages/callforspeakers.mdx
@@ -1,6 +1,7 @@
 import { Link } from "gatsby";
 import Layout from "../components/layout";
 import Card from "../components/Card";
+import Text from "../components/Text";
 
 <Card mx="10%" my="48px">
 
@@ -15,13 +16,15 @@ Please read this Call for Proposals thoroughly. Please don’t hesitate to ask q
 
 You! We welcome speakers of all experience levels and backgrounds.
 Your technical AND non-technical experience is valuable to the community!
-There is no limit on the number of proposals you can submit.
+As a speaker you can submit maximum of four proposals.
 
 ### Format
 
-Sessions: 50 minutes in length
+We have two options available for speakers to submit proposals for: 
 
-Workshops: If you are interested in giving a workshop, please contact us directly at <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>
+<Text my={20}>Workshops (Day 1): 4 hr duration in length, focused on hands on instruction in a classroom style setting.</Text>
+
+<Text my={20}>Sessions (Day 2): 50 minutes in length, standard presentation format.</Text>
 
 ### Themes and Levels of Expertise
 
@@ -48,34 +51,41 @@ Your talk could:
 
 ### Speaker Selection Process
 
-1.  You read through this Call for Proposals (reach out if you need help or have questions!) (required)
-1.  You submit a completed application by 04/11/2019 (required)
-1.  You submit a completed Community Assistance form by 04/11/2019 (optional, see “Financial Assistance” section)
-1.  We send out the first round of speaker acceptance emails by 04/30/2019
-1.  We send out the second round of speaker acceptance emails by 05/10/2019
-1.  You request feedback on your proposal by 06/05/2019 (optional)
-1.  We see you at the conference on 08/02/2019!
+<Text my={20}>1.  You read through this Call for Proposals (reach out if you need help or have questions!) (required)</Text>
+<Text my={20}>2.  You submit a completed application by 03/25/2020 (required)</Text>
+<Text my={20}>3.  You submit a completed Community Assistance form by 03/25/2020 (optional, see “Financial Assistance” section)</Text>
+<Text my={20}>4.  We send out the first round of speaker acceptance emails by 04/13/2020 </Text>
+<Text my={20}>5.  We send out the second round of speaker acceptance emails by 04/20/2020 </Text>
+<Text my={20}>6.  You request feedback on your proposal by 04/27/2020 (optional)</Text>
+<Text my={20}>7.  We see you at the conference on 08/13/2020 - 08/14/2020!</Text>
+
+If you will need financial assistance, reach out to our CFP team before proposal end date. While we cannot guarantee any level of assistance, we will do all that we can based upon available sponsorship and ticket dollars.
+
+Our review team will go through the abstracts in anonymous mode. Speaker details will be hidden to our review team during the process.
 
 ### Speaker Perks & Accommodations
 
-Speakers will receive a free admission to JS&Friends Conf.
+Speakers will receive a free admission to JS&Friends Conference and Workshops.
 
+<Text my={20}>
 If you have any special needs or circumstances we should know about, please contact us as early as possible,
-but no later than 04/11/2019! A special need might include (but certainly isn’t limited to)
+but no later than 03/25/2020! </Text>
+
+A special need might include (but certainly isn’t limited to)
 an extra ticket for a spouse or caregiver,wheelchair access, reserved seating, ramps, etc.
-Please contact us at <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>.
+Please contact us at <a href="mailto:cfp@javascriptandfriends.com">cfp@javascriptandfriends.com</a>.
 
 ### Financial Assistance
 
-In order to keep admission prices as low as possible for our first year, we strongly encourage speakers
+In order to keep admission prices as low as possible for our second year, we strongly encourage speakers
 to ask for travel assistance from employers. However, we acknowledge that this often results in a far less
 diverse group of speakers.
 
 If you will be unable to travel to and attend JS&Friends Conf without financial assistance,
-please contact <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>.
+please contact <a href="mailto:cfp@javascriptandfriends.com">cfp@javascriptandfriends.com</a>.
 
 If you or your company would like to sponsor a speaker’s travel, we have a sponsorship level for that!
-Contact <a href="mailto:sponsor@javascriptandfriends.com">sponsor@javascriptandfriends.com</a> for more info!
+Contact <a href="mailto:sponsors@javascriptandfriends.com">sponsors@javascriptandfriends.com</a> for more info!
 
 ### New Speakers!
 
@@ -85,8 +95,8 @@ in their <a href="http://www.codemash.org/call-speakers/" target="_blank" rel="n
 We specifically recommend the section entitled “How to write a good submission.”
 
 If you would like a human mentor, we can help connect you with a mentor.
-Please let us know at <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>
+Please let us know at <a href="mailto:cfp@javascriptandfriends.com">cfp@javascriptandfriends.com</a>
 
-
+<a href="https://sessionize.com/javascript-and-friends-conference-2020/" target="_blank" rel="noopener noreferrer">Submit Proposals</a>
 
 </Card>
