Updated Events and Packages
Updated events and package json.

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -11,21 +11,14 @@ import Text from "../components/Text";
 
 RSVP Open for Community Meetups 
 
-<Text my={20}>02.25.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-techlaunchers-online-meetup-tickets-94224683565" target="_blank" rel="noopener noreferrer">TechLaunchers Chat with Evelyn Van Til</a></Text>
-
-<Text my={20}>03.11.2020  <a href="https://www.linkedin.com/posts/javascript-and-friends_columbus-ohio-technical-activity-6636372060631257088-T-WT" target="_blank" rel="noopener noreferrer">Book Donation Drive - Columbus Library, Dublin Branch</a></Text>
-
-<Text my={20}>03.17.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-96032314237" target="_blank" rel="noopener noreferrer">Asynchronous Events in JavaScript talk by Bob Fornal</a></Text>
-
 <Text my={20}>03.25.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-vuejs-online-meetup-tickets-96033230979" target="_blank" rel="noopener noreferrer">SSR Overview with Nuxt and VueJS talk by Jessie Barnett</a></Text>
+
+<Text my={20}>04.08.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-100300920754" target="_blank" rel="noopener noreferrer">OWASP Fundamentals and Overview by Bill Sempf</a></Text>
 
 ## Subscribe
 
 <a href="http://eepurl.com/gubqeb" target="_blank">Subscribe </a>to our mailing list for updates on developer community events. 
 
-Follow our <a href="https://www.youtube.com/channel/UCz4LNOw6U7ncyOSx73u_YMQ/videos?view_as=subscriber" target="_blank">YouTube Channel</a> to watch prior recorded meetups.
-
-Follow our <a href="https://www.twitch.tv/javascriptandfriends/" target="_blank">Twitch Channel</a> to join our meetups live.
-
+Follow us on YouTube and Twitch to watch our recorded meetups and join us online.
 
 </Card>
