Updated CFP Pages
Updated CFP Pages to remove Sessionize links and remove Call for Speakers highlight text on Home Page.

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -11,7 +11,7 @@ import Text from "../components/Text";
 
 RSVP Open for Community Meetups 
 
-<Text my={20}>04.08.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-100300920754" target="_blank" rel="noopener noreferrer">OWASP Fundamentals and Overview by Bill Sempf</a></Text>
+<Text my={20}>04.21.2020  <a href="https://twitter.com/JSFriendsConf/status/1248341141197643776" target="_blank" rel="noopener noreferrer">Angular and Ngrx AMA on Twitter with Sam Julien</a></Text>
 
 ## Subscribe
 
