Added May Event
Added May Event

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -13,6 +13,8 @@ RSVP Open for Community Meetups
 
 <Text my={20}>04.21.2020  <a href="https://twitter.com/JSFriendsConf/status/1248341141197643776" target="_blank" rel="noopener noreferrer">Angular and Ngrx AMA on Twitter with Sam Julien</a></Text>
 
+<Text my={20}>05.12.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-102587197068" target="_blank" rel="noopener noreferrer">Static Sites and Serverless Functions with James Quick</a></Text>
+
 ## Subscribe
 
 <a href="http://eepurl.com/gubqeb" target="_blank">Subscribe </a>to our mailing list for updates on developer community events. 
