Add OutSystems details
Included OutSystems as Sponsor

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -9,11 +9,7 @@ import Text from "../components/Text";
 
 ## Community Events
 
-RSVP Open for Community Meetups 
-
-<Text my={20}>05.12.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-102587197068" target="_blank" rel="noopener noreferrer">Static Sites and Serverless Functions with James Quick</a></Text>
-
-<Text my={20}>05.26.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-104359905286" target="_blank" rel="noopener noreferrer">Lazy Loading Images Progressively with Shodipo Ayomide</a></Text>
+Stay tuned for meetup details.
 
 ## Subscribe
 
