Commit changes for broken links in preview
Commit changes for broken links in preview

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -13,7 +13,7 @@ Stay tuned for meetup details.
 
 ## Subscribe
 
-<a href="http://eepurl.com/gubqeb" target="_blank">Subscribe </a>to our mailing list for updates on developer community events. 
+<a href="http://eepurl.com/gubqeb" target="_blank" rel="noopener noreferrer">Subscribe </a>to our mailing list for updates on developer community events. 
 
 Follow us on YouTube and Twitch to watch our recorded meetups and join us online.
 
