Updated July Community Meetups
Updated July Community Meetups

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -9,7 +9,11 @@ import Text from "../components/Text";
 
 ## Community Events
 
-Stay tuned for meetup details.
+RSVP Open for Community Meetups 
+
+<Text my={20}>07.07.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-109037873214" target="_blank" rel="noopener noreferrer">RxJS Internals with Jan-Niklas</a></Text>
+
+<Text my={20}>07.14.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-109041827040" target="_blank" rel="noopener noreferrer">Leveraging JavaScript to develop accessible websites with Anuradha</a></Text>
 
 ## Subscribe
 
