Included VueJS Meetup Details

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -15,6 +15,8 @@ RSVP Open for Community Meetups
 
 <Text my={20}>07.14.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-109041827040" target="_blank" rel="noopener noreferrer">Leveraging JavaScript to develop accessible websites with Anuradha</a></Text>
 
+<Text my={20}>07.22.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-vuejs-online-meetup-tickets-110663130402" target="_blank" rel="noopener noreferrer">Build VueJs Plugins and Services with Kevin Griffin</a></Text>
+
 ## Subscribe
 
 <a href="http://eepurl.com/gubqeb" target="_blank" rel="noopener noreferrer">Subscribe </a>to our mailing list for updates on developer community events. 
