Commit Additional Changes
Commit Changes

--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -38,6 +38,7 @@ import tylerImage from "../components/SpeakerImages/tyler_blake";
 import vladimirImage from "../components/SpeakerImages/vladimir_repin";
 import deneishaImage from "../components/SpeakerImages/deneisha_franklin";
 import palmidiaImage from "../components/SpeakerImages/palmidia";
+import jerryImage from "../components/SpeakerImages/jerry";
 import { Hidden } from '../components/Hidden';
 import Text from "../components/Text";
 import { Link as ButtonLink } from "../components/Button";
@@ -140,6 +141,11 @@ linkedin="hakansilfvernagel"
  <Speaker name="Jamie Wright" Image={jamieImage} 
 twitter="jwright" 
 linkedin="brilliantfantastic" 
+ />
+
+  <Speaker name="Jerry Valentine" Image={jerryImage} 
+twitter="@JerryV513_" 
+linkedin="jerry-valentine-24610b194" 
  />
 
  
