Updated Speakers with Name Changes for Håkan
Updated Speakers with Name Changes for Håkan

--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -133,7 +133,7 @@ twitter="guyroyse"
 linkedin="groyse" 
  />
 
- <Speaker name="Hakan Silfvernagel" Image={hakanImage} 
+ <Speaker name="Håkan Silfvernagel" Image={hakanImage} 
 twitter="agrevlis" 
 linkedin="hakansilfvernagel" 
  />
