--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -46,7 +46,7 @@ import { Link as ButtonLink } from "../components/Button";
 <Hidden as="h1">Speakers</Hidden>
 <Card>
 <Text>
-Friends join us on Aug-13-2020 and Aug-14-2020 from 08:00 AM to 05:30 PM.
+Friends join us on Aug-13-2020 and Aug-14-2020 from 08:00 AM to 05:30 PM US EDT.
 </Text>
 </Card>
 <Flex flexDirection="row" flexWrap="wrap" alignItems="center" justifyContent="center" style={{ padding: "2rem", width: "" }}>
