--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -11,11 +11,11 @@ import Text from "../components/Text";
 
 RSVP Open for Community Meetups 
 
-<Text my={20}>07.07.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-109037873214" target="_blank" rel="noopener noreferrer">RxJS Internals with Jan-Niklas</a></Text>
-
-<Text my={20}>07.14.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-109041827040" target="_blank" rel="noopener noreferrer">Leveraging JavaScript to develop accessible websites with Anuradha</a></Text>
-
 <Text my={20}>07.22.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-vuejs-online-meetup-tickets-110663130402" target="_blank" rel="noopener noreferrer">Build VueJs Plugins and Services with Kevin Griffin</a></Text>
+
+<Text my={20}>08.05.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-114142218448" target="_blank" rel="noopener noreferrer">TensorFlowJS and MachineLearning with Gant Laborde</a></Text>
+
+<Text my={20}>08.26.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-114204063428" target="_blank" rel="noopener noreferrer">Angular’s Dependency Injection with Santosh</a></Text>
 
 ## Subscribe
 
