Updated Workshop and Speakers
Updated workshop with time and added new speaker. Fine tune schedule page.

--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -39,6 +39,7 @@ import vladimirImage from "../components/SpeakerImages/vladimir_repin";
 import deneishaImage from "../components/SpeakerImages/deneisha_franklin";
 import palmidiaImage from "../components/SpeakerImages/palmidia";
 import jerryImage from "../components/SpeakerImages/jerry";
+import tedImage from "../components/SpeakerImages/ted_pennings";
 import { Hidden } from '../components/Hidden';
 import Text from "../components/Text";
 import { Link as ButtonLink } from "../components/Button";
@@ -234,6 +235,11 @@ linkedin="shodipo-ayomide"
  <Speaker name="Tamas Piros" Image={tamasImage} 
 twitter="tpiros" 
 linkedin="tamaspiros" 
+ />
+
+ <Speaker name="Ted Pennings" Image={tedImage} 
+twitter="thesleepyvegan" 
+linkedin="tedpennings" 
  />
 
  <Speaker name="Tyler Blake" Image={tylerImage} 
