--- a/src/pages/workshops.mdx
+++ b/src/pages/workshops.mdx
@@ -38,13 +38,15 @@ twitter="httpJunkie"
 linkedin="eric-b" 
 talk={{ title: "Let’s Build an App with React", 
 description: "Building a complete application with React can be challenging and this workshop is geared at teaching all the basic concepts and fundamentals including new features like React Hooks, React Router and using new features like Suspense. We step through how to create a custom build using Webpack and babel then build a frame consisting of menus and use of responsive behavior ad finally create a master-detail page using React Router and the SpaceX API complete with data fetching.In four hours we will go from beginner to intermediate knowledge of React each attendee will have a full instructional repo they can take home and continue learning or go over the details from the workshop in step-by-step detail at a slower pace on their own." }} 
+timing ="1.30 PM EDT to 5.30 PM EDT"
  />
 
- <Workshop name="Michael Leners" Image={michaelImage} 
+<Workshop name="Michael Leners" Image={michaelImage} 
 twitter="micLeners" 
 linkedin="micleners" 
 talk={{ title: "Cypress for E2E Testing: A Retrospective", 
 description: "When choosing our end-to-end testing solution\, our team broke from the tradition of Protractor for Angular and forged a new path in our local community by using Cypress. Was the grass greener? Yes\, it was. This talk will cover at a high level what Cypress is\, what it offers and who is likely to use it. Then we\’ll dive into built-in features that make Cypress so awesome to use. We will also discuss common challenges faced when creating and implementing an end-to-end test suite. This includes test structuring\, dealing with authentication\, timing issues and more. A demo repo to get started in Cypress testing will be provided." }} 
+timing ="8.00 AM EDT to 12.00 PM EDT"
  />
 
  <Workshop name="OutSystems Team" Image={outsystemsImage} 
@@ -52,6 +54,7 @@ twitter=""
 linkedin="" 
 talk={{ title: "Javascript Without Javascript", 
 description: "Join this workshop to learn how a low-code development platform can simplify the delivery of modern web and mobile applications and remove many of the tedious tasks associated with hand-coding. To set the stage we will build a progressive web app (PWA) from scratch letting you direct key aspects of the application. When done\, you will have the app to play with on your device. From there we will go under the covers and show you how the code was generated and then demonstrate how to expand the project with some custom javascript.  We promise we will keep it fun and engaging." }} 
+ timing ="9.30 AM EDT to 1.00 PM EDT"
  />
 
 <Workshop name="Tamas Piros" Image={tamasImage} 
@@ -59,6 +62,7 @@ twitter="tpiros"
 linkedin="tamaspiros" 
 talk={{ title: "Real life JAMstack", 
 description: "Is it possible to develop and deploy a production ready app during a conference workshop? The answer is of course yes! During the workshop we will create an e-commerce website utilising the JAMstack - a buzz word of late which describes a different way of developing and deploying sites. JAMstack sites spearhead better performance \, easier deployment and the usage of APIs. Attendees will be able to learn about the key concepts such as server-side rendering \,static site generation and be familiar with headless CMS." }} 
+ timing ="8.00 AM EDT to 12.00 PM EDT"
  />
 
 <Workshop name="Alejandro Mercado" Image={alexImage} 
@@ -66,6 +70,7 @@ twitter="alexmarket"
 linkedin="alexmarket" 
 talk={{ title: "Should I build or should I not? An approach to JavaScript DevOps or the newly called WebOps.", 
 description: "The term DevOps is everywhere. But is not a job description\, DevOps is a set of practices that combines software development (Dev) and information-technology operations (Ops) which aims to shorten the systems development life cycle and provide continuous delivery and integration with high software quality.As JavaScript Devs (front\, back or full stack) we can usually think that we have nothing to do with the infrastructure or operations\, wrong. Your code your responsibility.In this workshop we are going to see how a traditional web developer can assume DevOps functions avoiding some common mistakes or the well know burn out.I\'ll show how to deliver into production a web based app\, fast & furious. Showing some alternatives and Node JS based tools. Finally I would like to show how GitLab can contribute to make you life easier. Lot of fun and learning guarantee." }} 
+ timing ="1.30 PM EDT to 5.30 PM EDT"
  />
 
 <Workshop name="Michael Leners" Image={michaelImage} 
@@ -73,6 +78,7 @@ twitter="micLeners"
 linkedin="micleners" 
 talk={{ title: "Becoming Contentful with Your Gatsby Static Site on Netlify", 
 description: "JAMStack\, say what? Publishing blazing fast and secure websites has never been easier or so free. This talk should be accessible to all\, but experience in CMS structure\, React\, Gatsby\, Netlify (or similar) deployment will help! In this talk\, you can expect to learn about these new technologies and what they do. How to start a new Gatsby site (or how to start the one I built). How to setup Contentful and create your first model and content. How to link Contentful and Gatsby\, use GraphQL to fetch this data and display it on your website. How to use Gatsby\’s GraphQL playground to test queries. Finally, you\’ll see how to deploy to Netlify and connect Contentful to Netlify to trigger builds when your data changes. What\'s best is if lose track or want to try this out at a home\, a full tutorial will is provided." }} 
+timing ="1.30 PM EDT to 5.30 PM EDT"
  />
 
 </Flex>
