--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -40,6 +40,7 @@ import deneishaImage from "../components/SpeakerImages/deneisha_franklin";
 import palmidiaImage from "../components/SpeakerImages/palmidia";
 import jerryImage from "../components/SpeakerImages/jerry";
 import tedImage from "../components/SpeakerImages/ted_pennings";
+import billChurchillImage from "../components/SpeakerImages/bill_churchill";
 import { Hidden } from '../components/Hidden';
 import Text from "../components/Text";
 import { Link as ButtonLink } from "../components/Button";
@@ -86,6 +87,11 @@ linkedin="anarcisse"
 <Speaker name="Bekah Hawrot Weigel" Image={bekahImage} 
 twitter="bekahhw" 
 linkedin="bekah-hawrot-weigel" 
+ />
+
+<Speaker name="Bill Churchill" Image={billChurchillImage} 
+twitter="" 
+linkedin="wmchurchill3" 
  />
 
  <Speaker name="Bob Fornal" Image={bobFornalImage} 
