--- a/src/pages/workshops.mdx
+++ b/src/pages/workshops.mdx
@@ -8,6 +8,7 @@ import ericbishardImage from "../components/SpeakerImages/eric_bishard";
 import tamasImage from "../components/SpeakerImages/tamas_piros";
 import michaelImage from "../components/SpeakerImages/michael";
 import outsystemsImage from "../components/SpeakerImages/outsystems";
+import joelImage from "../components/SpeakerImages/joel_lord";
 
 import { Hidden } from '../components/Hidden';
 import Text from "../components/Text";
@@ -57,6 +58,14 @@ talk={{ title: "Real life JAMstack",
 description: "Is it possible to develop and deploy a production ready app during a conference workshop? The answer is of course yes! During the workshop we will create an e-commerce website utilising the JAMstack - a buzz word of late which describes a different way of developing and deploying sites. JAMstack sites spearhead better performance \, easier deployment and the usage of APIs. Attendees will be able to learn about the key concepts such as server-side rendering \,static site generation and be familiar with headless CMS." }} 
  timing ="9.00 AM EDT to 01.00 PM EDT"
  />
+ 
+ <Workshop name="Joel Lord" Image={joelImage} 
+twitter="joel__lord" 
+linkedin="joel-lord" 
+talk={{ title: "Hands-on Intro to Kubernetes (and OpenShift) for Developers", 
+description: "Learn to build and deploy cloud-native Node.js applications on Kubernetes and OpenShift through a series of hands-on lab examples.This interactive session involves using kubectl\, oc\, curl\, and common command-line tools to interact with Kubernetes APIs. By the end of this lab, you\’ll be deploying\, scaling\, and automating JS-based distributed solutions using containers\, Kubernetes\, and other popular open source tools for distributed computing.These examples are designed to show JS developers how to maintain speed and productivity with a container-based development workflow." }} 
+timing ="1.30 PM EDT to 5.30 PM EDT"
+ />
 
  <Workshop name="Eric Bishard" Image={ericbishardImage} 
 twitter="httpJunkie" 
@@ -81,6 +90,7 @@ talk={{ title: "Becoming Contentful with Your Gatsby Static Site on Netlify",
 description: "JAMStack\, say what? Publishing blazing fast and secure websites has never been easier or so free. This talk should be accessible to all\, but experience in CMS structure\, React\, Gatsby\, Netlify (or similar) deployment will help! In this talk\, you can expect to learn about these new technologies and what they do. How to start a new Gatsby site (or how to start the one I built). How to setup Contentful and create your first model and content. How to link Contentful and Gatsby\, use GraphQL to fetch this data and display it on your website. How to use Gatsby\’s GraphQL playground to test queries. Finally, you\’ll see how to deploy to Netlify and connect Contentful to Netlify to trigger builds when your data changes. What\'s best is if lose track or want to try this out at a home\, a full tutorial will is provided." }} 
 timing ="1.30 PM EDT to 5.30 PM EDT"
  />
+
 
 </Flex>
 
