Updated September month meetups

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -11,11 +11,11 @@ import Text from "../components/Text";
 
 RSVP Open for Community Meetups 
 
-<Text my={20}>07.22.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-vuejs-online-meetup-tickets-110663130402" target="_blank" rel="noopener noreferrer">Build VueJs Plugins and Services with Kevin Griffin</a></Text>
+<Text my={20}>09.15.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-118786759395" target="_blank" rel="noopener noreferrer">Using AI to Power Your Images with Doug</a></Text>
 
-<Text my={20}>08.05.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-114142218448" target="_blank" rel="noopener noreferrer">TensorFlowJS and MachineLearning with Gant Laborde</a></Text>
+<Text my={20}>09.23.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-vuejs-columbus-online-meetup-tickets-119299149969" target="_blank" rel="noopener noreferrer">Going headless with Nuxt.js with Samuel Snopko</a></Text>
 
-<Text my={20}>08.26.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-114204063428" target="_blank" rel="noopener noreferrer">Angular’s Dependency Injection with Santosh</a></Text>
+<Text my={20}>09.28.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-120196865059" target="_blank" rel="noopener noreferrer">State Handling Strategies in React with Milecia</a></Text>
 
 ## Subscribe
 
