--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -17,6 +17,10 @@ RSVP Open for Community Meetups
 
 <Text my={20}>09.28.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-120196865059" target="_blank" rel="noopener noreferrer">State Handling Strategies in React with Milecia</a></Text>
 
+<Text my={20}>10.09.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-workshop-tickets-121222585015" target="_blank" rel="noopener noreferrer">Cypress End to End Testing Workshop with Michael Leners</a></Text>
+
+<Text my={20}>10.10.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-workshop-tickets-121226613063" target="_blank" rel="noopener noreferrer">Becoming Contentful with Your Gatsby Static Site on Netlify Workshop with Michael Leners</a></Text>
+
 ## Subscribe
 
 <a href="http://eepurl.com/gubqeb" target="_blank" rel="noopener noreferrer">Subscribe </a>to our mailing list for updates on developer community events. 
