Added VueJS Meetup link

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -25,6 +25,8 @@ RSVP Open for Community Meetups
 
 <Text my={20}>10.20.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-122419573239" target="_blank" rel="noopener noreferrer">Styling Web Apps with CSS, SASS with Rajasegar</a></Text>
 
+<Text my={20}>10.28.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-124781138745" target="_blank" rel="noopener noreferrer">Building Tesla’s Battery Range Calculator using Vue.js or ReactJS with Peter</a></Text>
+
 ## Subscribe
 
 <a href="http://eepurl.com/gubqeb" target="_blank" rel="noopener noreferrer">Subscribe </a>to our mailing list for updates on developer community events. 
