Updated community events

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -11,14 +11,6 @@ import Text from "../components/Text";
 
 RSVP Open for Community Meetups 
 
-<Text my={20}>09.15.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-118786759395" target="_blank" rel="noopener noreferrer">Using AI to Power Your Images with Doug</a></Text>
-
-<Text my={20}>09.23.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-vuejs-columbus-online-meetup-tickets-119299149969" target="_blank" rel="noopener noreferrer">Going headless with Nuxt.js with Samuel Snopko</a></Text>
-
-<Text my={20}>09.28.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-120196865059" target="_blank" rel="noopener noreferrer">State Handling Strategies in React with Milecia</a></Text>
-
-<Text my={20}>10.07.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-122417822001" target="_blank" rel="noopener noreferrer">Micro-FrontEnd talk with Nourhan</a></Text>
-
 <Text my={20}>10.09.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-workshop-tickets-121222585015" target="_blank" rel="noopener noreferrer">Cypress End to End Testing Workshop with Michael Leners</a></Text>
 
 <Text my={20}>10.10.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-workshop-tickets-121226613063" target="_blank" rel="noopener noreferrer">Becoming Contentful with Your Gatsby Static Site on Netlify Workshop with Michael Leners</a></Text>
@@ -26,6 +18,8 @@ RSVP Open for Community Meetups
 <Text my={20}>10.20.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-122419573239" target="_blank" rel="noopener noreferrer">Styling Web Apps with CSS, SASS with Rajasegar</a></Text>
 
 <Text my={20}>10.28.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-124781138745" target="_blank" rel="noopener noreferrer">Building Tesla’s Battery Range Calculator using Vue.js or ReactJS with Peter</a></Text>
+
+<Text my={20}>11.17.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-126459745503" target="_blank" rel="noopener noreferrer">Build and Train Neural Networks in JavaScript with Kevin</a></Text>
 
 ## Subscribe
 
