Update Community Events

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -11,15 +11,9 @@ import Text from "../components/Text";
 
 RSVP Open for Community Meetups 
 
-<Text my={20}>10.09.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-workshop-tickets-121222585015" target="_blank" rel="noopener noreferrer">Cypress End to End Testing Workshop with Michael Leners</a></Text>
-
-<Text my={20}>10.10.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-workshop-tickets-121226613063" target="_blank" rel="noopener noreferrer">Becoming Contentful with Your Gatsby Static Site on Netlify Workshop with Michael Leners</a></Text>
-
-<Text my={20}>10.20.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-122419573239" target="_blank" rel="noopener noreferrer">Styling Web Apps with CSS, SASS with Rajasegar</a></Text>
-
-<Text my={20}>10.28.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-124781138745" target="_blank" rel="noopener noreferrer">Building Tesla’s Battery Range Calculator using Vue.js or ReactJS with Peter</a></Text>
-
 <Text my={20}>11.17.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-126459745503" target="_blank" rel="noopener noreferrer">Build and Train Neural Networks in JavaScript with Kevin</a></Text>
+
+<Text my={20}>12.15.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-129489044217" target="_blank" rel="noopener noreferrer">Create Dynamic WebXR experiences with Angular and A-Frame by Jeff Fry</a></Text>
 
 ## Subscribe
 
