Updated January Event

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -11,9 +11,8 @@ import Text from "../components/Text";
 
 RSVP Open for Community Meetups 
 
-<Text my={20}>11.17.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-126459745503" target="_blank" rel="noopener noreferrer">Build and Train Neural Networks in JavaScript with Kevin</a></Text>
+<Text my={20}>01.19.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-136030873003" target="_blank" rel="noopener noreferrer">Making Regex Readable by Bob Fornal</a></Text>
 
-<Text my={20}>12.15.2020  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-129489044217" target="_blank" rel="noopener noreferrer">Create Dynamic WebXR experiences with Angular and A-Frame by Jeff Fry</a></Text>
 
 ## Subscribe
 
