--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -13,6 +13,8 @@ RSVP Open for Community Meetups
 
 <Text my={20}>01.19.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-136030873003" target="_blank" rel="noopener noreferrer">Making Regex Readable by Bob Fornal</a></Text>
 
+<Text my={20}>01.27.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-vuejs-online-meetup-tickets-136435394939" target="_blank" rel="noopener noreferrer">Vue.js and TypeScript: Working Together like Peanut Butter and Jelly by Rob Richardson</a></Text>
+
 
 ## Subscribe
 
