--- a/src/pages/callforsponsors.mdx
+++ b/src/pages/callforsponsors.mdx
@@ -5,23 +5,54 @@ import sponsorImage from "./sponsor.png";
 
 <Card>
 
-## Interested in Sponsoring !!
+# Interested in Sponsoring?
 
 <img src={sponsorImage} style="display: block; margin-left: auto;  margin-right: auto;  width: 50%;" />
 
 We are a volunteer-run developer conference in the Columbus, OH area with a focus on JavaScript based technologies.
-It's called the JavaScript and Friends Conference, and it's landing in the Columbus area on Thursday, August 13, 2020 and Friday, August 14, 2020!
+It's called the JavaScript and Friends Conference, and it's landing in the Columbus area on Thursday, August 19, 2021 and Friday, August 20, 2021!
 Our mission is to bring together a diverse group of around 200 JavaScript developers and friends to learn new skills and concepts
 and to network and develop new relationships. With this conference, we want to contribute to the cultivation of a welcoming, inclusive,
 and dynamic tech scene throughout the mid-west and beyond.
 
 Here's your chance to contribute to that mission! We're looking for the best companies to partner with us and help to make the
-Second Annual JavaScript and Friends Conference a success. And with your contribution, it will be!
+Third Annual JavaScript and Friends Conference a success. And with your contribution, it will be!
 
 Our team has created opportunities for sponsorship at a number of levels to make it easier for you to support our team of volunteers
 in bringing this about.
 
-<a href="https://drive.google.com/a/javascriptandfriends.com/file/d/1qFY4foo0c5Kl--WkqvfOeU1vGjOX09Dd/view?usp=sharing" target="_blank" rel="noopener noreferrer">View our Sponsorship Opportunities</a>
+|                                               | Platinum      | Gold             | Silver            | Bronze    |
+| :-------------------------------------------- | :-----------: | :--------------: | :---------------: | :-------: |
+| # Available                                   | 2             | 3                | 4                 | 6         |
+| Company Logo and Description on our website   | ✅            | ✅                | ✅                | Logo Only |
+| Number of Complimentary Tickets               | 4             | 2                | 2                 |           |
+| 10% off Additional Conference Passes          | ✅            | 🔴                | 🔴                | 🔴        |
+| % of Sponsorship to benefit BootCamp Students | 10%           | 10%              | 10%               | 5%        |
+| Minimum mentions in Social Media              | 5             | 3                | 2                 | 1         |
+| Logo shown between sessions (rotation rate)   | 5 times       | 3 times          | 1 time            | 🔴        |
+| Mentions in Conference Emails                 | ✅            | ✅               | ✅                 | 🔴        |
+| Booth at main conference                      | Top Placement | Higher Placement | Regular Placement | 🔴        |
+| Attendee bag insert                           | ✅            | ✅               | ✅                 | 🔴        |
+| Display of Logo on Eventbrite Ticketing Page  | ✅            | ✅               | 🔴                 | 🔴        |
+| One Workshop or Session slot *                | 1st Choice    | 2nd Choice       | 🔴                | 🔴        |
+| Price                                         | $3,000        | $2,500           | $2,000            | $1,000    |
+
+### Add-On Sponsorships
+
+
+
+| Add-On            | Cost      | Availalble | Benefits |
+|-------------------|-----------|------------|----------|
+| Speaker Dinner    | $1,500    | 1          | We love our speakers. Without them, we cannot do things like this. Sponsoring the Speaker Dinner your company will get: <ul><li>Exclusive Logo placement at Speaker Dinner</li><li>A short introduction of company</li><li>Attendance for 2-3 of your reps for opportunity to mingle with the speakers</li></ul> |
+| Lanyards          | $500      | 1          | Your company logo on attendee lanyards |
+| Breakfast         | $500      | 2          | Who can learn on an empty stomach? We know we can't. Sponsoring our main conference continental breakfast helps energize and prepare attendees for the day ahead of them. By sponsoring our breakfast, you'll get:<ul><li>Prominent placement of your company information with the food</li><li>The ability to put a table tent or sheet on tables in the main hall</li><li>A special place for some SWAG items at the end of the food tables (if desired)</li></ul> |
+| Lunch             | $1,000    | 4          | Everyone needs to eat! By becoming our lunch sponsor, you will be held in the highest esteem by our attendees. Benefits Include: <ul><li>The prominent display of your company information with the food</li><li>A short introduction of your company during lunch by you</li><li>The ability to add Table Tents or information sheet on the dining tables in the main hall</li></ul> |
+| Beverage Bar      | $500      | 2          | Staying hydrated is so important for everyone. Would you like to be known as the company that ensured the caffeine continued to flow throughout the day? If so, we'd love to have you as our Beverage Bar sponsor! Benefits include: <ul><li>The prominent display of your company information at the beverage stations</li><li>The undying appreciation from attendees keeping them caffeinated and hydrated</li></ul> |
+| I have an idea!   | Priceless |            | Do you have an idea that we haven't thought of for sponsorship? If so, let's talk about how you feel you can get the most value out of your sponsorship. Help us help you help us! |
+
+### Registration Statistics
+2020 - Conference and Workshop Registrations - 385 Attendees excluding speakers and volunteers
+2019 - Conference and Workshop Registrations - 164 Attendees including speakers and volunteers
 
 ### Where is my money going?
 
