--- a/src/pages/callforsponsors.mdx
+++ b/src/pages/callforsponsors.mdx
@@ -2,6 +2,7 @@ import { Link } from "gatsby";
 import Layout from "../components/layout";
 import Card from "../components/Card";
 import sponsorImage from "./sponsor.png";
+import Text from "../components/Text";
 
 <Card>
 
@@ -10,8 +11,8 @@ import sponsorImage from "./sponsor.png";
 <img src={sponsorImage} style="display: block; margin-left: auto;  margin-right: auto;  width: 50%;" />
 
 We are a volunteer-run developer conference in the Columbus, OH area with a focus on JavaScript based technologies.
-It's called the JavaScript and Friends Conference, and it's landing in the Columbus area on Thursday, August 19, 2021 and Friday, August 20, 2021!
-Our mission is to bring together a diverse group of around 200 JavaScript developers and friends to learn new skills and concepts
+It's called the JavaScript and Friends Conference, and it's landing in the Columbus area on <Text my={20}>Thursday, August 19, 2021 and Friday, August 20, 2021</Text>!
+Our mission is to bring together a diverse group of around <Text my={20}>200 </Text>JavaScript developers and friends to learn new skills and concepts
 and to network and develop new relationships. With this conference, we want to contribute to the cultivation of a welcoming, inclusive,
 and dynamic tech scene throughout the mid-west and beyond.
 
@@ -23,7 +24,7 @@ in bringing this about.
 
 |                                               | Platinum      | Gold             | Silver            | Bronze    |
 | :-------------------------------------------- | :-----------: | :--------------: | :---------------: | :-------: |
-| # Available                                   | 2             | 3                | 4                 | 6         |
+| # Available                                   | <Text my={20}>2</Text>             | <Text my={20}>3</Text>                | <Text my={20}>4 </Text>                |<Text my={20}> 6   </Text>      |
 | Company Logo and Description on our website   | ✅            | ✅                | ✅                | Logo Only |
 | Number of Complimentary Tickets               | 4             | 2                | 2                 |           |
 | 10% off Additional Conference Passes          | ✅            | 🔴                | 🔴                | 🔴        |
@@ -51,8 +52,10 @@ in bringing this about.
 | I have an idea!   | Priceless |            | Do you have an idea that we haven't thought of for sponsorship? If so, let's talk about how you feel you can get the most value out of your sponsorship. Help us help you help us! |
 
 ### Registration Statistics
-2020 - Conference and Workshop Registrations - 385 Attendees excluding speakers and volunteers
-2019 - Conference and Workshop Registrations - 164 Attendees including speakers and volunteers
+
+<Text my={20}>2020 - Conference and Workshop Registrations - 385 Attendees excluding speakers and volunteers</Text>
+
+<Text my={20}>2019 - Conference and Workshop Registrations - 164 Attendees including speakers and volunteers</Text>
 
 ### Where is my money going?
 
